Fix word break on really long search terms

--- a/src/components/NoResults/NoResults.scss
+++ b/src/components/NoResults/NoResults.scss
@@ -14,6 +14,7 @@
 
   span:last-child {
     font-weight: 500;
+    word-break: break-word;
   }
 }
 
